--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,16 @@
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
-    "mongoose": "^5.8.10",
+    "mongoose": "^5.13.14",
+    "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^3.2.0",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
