--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "lottie-react": "^2.2.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
