--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^6.0.0",
     "mongoose": "^5.13.14",
+    "mongoose-dateonly": "^1.0.6",
     "multer": "^1.4.4",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.2.0",
