--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
     "antd": "^4.18.5",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
-    "lottie-react": "^2.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
