--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.18.5",
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
+    "lottie-react": "^2.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
